blockml/test/errors/04_model/e48/e48_one.view
view: e48_one
table: 1
fields:
- measure: mea2
  type: min
  sql: ${dim1}

- dimension: dim1
  sql: 222
